# basketball-possession-analyzer

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/: run_demo.py  run_real_clip_demo.py
src/basketball_possession_analyzer/: __init__.py
src/basketball_possession_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/basketball_possession_analyzer/classification/: __init__.py  base.py  color_classifier.py  embedding_classifier.py  result.py  team.py
src/basketball_possession_analyzer/court/: __init__.py  homography.py  points.py  projection.py
tests/: test_package.py
tests/classification/: test_base_classifier.py  test_classification_result.py  test_color_classifier.py  test_embedding_classifier.py  test_team.py
tests/court/: test_homography.py  test_points.py  test_projection.py
tests/detection/: test_adapters.py  test_base_detector.py  test_bbox.py  test_detection.py  test_labels.py  test_mock_detector.py  test_result.py
tests/examples/: test_run_demo.py
tests/identity/: test_identity_resolution_result.py  test_identity_resolver.py  test_player_identity.py
tests/pipeline/: test_pipeline.py  test_pipeline_result.py
tests/recognition/: test_base_recognizer.py  test_matcher.py  test_mock_recognizer.py  test_number_result.py  test_vlm_stub.py
tests/shots/: test_classifier.py  test_detector.py  test_event.py
tests/tracking/: test_iou_tracker.py  test_track.py  test_tracking_result.py
tests/video/: test_frame_iterator.py  test_loader.py  test_metadata.py  test_writer.py
tests/visualization/: test_renderer.py
(+37 files in other folders)
