[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basketball-possession-analyzer"
version = "0.1.0"
description = "Basketball possession analyzer for detection, tracking, identity resolution, homography, shot detection, and annotated rendering."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.10",
    "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]